# SteamGameSuggestor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestTestfile.cmake  Makefile  README.md  build.ninja  cmake_install.cmake  compile_run.bat  compile_test.bat
.cache/clangd/index/: gmock-actions.h.2988B2EBFADA868E.idx  gmock-all.cc.6CDC2783593068AB.idx  gmock-cardinalities.cc.402A7FA0D5BE991B.idx  gmock-cardinalities.h.83350A47D05D99D1.idx  gmock-function-mocker.h.270FAB9EA73D005E.idx  gmock-generated-actions.h.F24DA5AE22E3146D.idx  gmock-internal-utils.cc.0DB872B922EAEBB1.idx  gmock-internal-utils.h.ED63C30DFE1BF50D.idx  gmock-matchers.cc.E3889971226D9A34.idx  gmock-matchers.h.294708B08D092471.idx  gmock-matchers.h.38E04C0269E0DF30.idx  gmock-more-actions.h.465E027DE15E5C2F.idx  gmock-more-matchers.h.873118D74F5C82E8.idx  gmock-nice-strict.h.F676486560CC0911.idx  gmock-port.h.78E4CFCD4B4932F6.idx  gmock-port.h.CA6716130E19EEBC.idx  gmock-pp.h.C344D800F63B3757.idx  gmock-spec-builders.cc.6E270D66BC309DBD.idx  gmock-spec-builders.h.637D708076527375.idx  gmock.cc.8C27350489EE9F38.idx  gmock.h.7C09563006550A20.idx  gmock_main.cc.0D448EB90B3632A9.idx  gtest-all.cc.8E946BE38D6EB856.idx  gtest-assertion-result.cc.BA01A68D24911005.idx  gtest-assertion-result.h.673A0CFBF45A650D.idx  gtest-death-test-internal.h.5824737AFF17033E.idx  gtest-death-test.cc.C4056B9D3F1CCE44.idx  gtest-death-test.h.04A5611837F40CD0.idx  gtest-filepath.cc.54C0222D4798D43C.idx  gtest-filepath.h.7F88E266E5BEC24D.idx  gtest-internal-inl.h.A455357BABF5BDAB.idx  gtest-internal.h.70458E0AB401F3F3.idx  gtest-matchers.cc.418DD53B7A9F24CD.idx  gtest-matchers.h.4D2430C4CC35735B.idx  gtest-message.h.53A4F6951BBB7D64.idx  gtest-param-test.h.D6845D684B7B2900.idx  gtest-param-util.h.8FDE972ED806662C.idx  gtest-port-arch.h.60889CE94219AE7C.idx  gtest-port.cc.CCEF943DC7210889.idx  gtest-port.h.21DC78E15282CADB.idx  (+17 more)
.github/ISSUE_TEMPLATE/: Bug.md  Feature.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  linux-build.yml  windows-build.yml
include/: GameData.h  GamesManager.h  HLTB.h  HttpClient.h  SteamWebAPI.h  utils.h
scripts/: linux-ci.sh  windows-ci-script.bat
src/: GameData.cpp  GamesManager.cpp  HLTB.cpp  HttpClient.cpp  SteamWebAPI.cpp  main.cpp  utils.cpp
tests/: GamesManager_test.cpp  test_main.cpp  utils_test.cpp
